--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "start:dev": "npm run build && node dist/index.js",
     "start": "node dist/index.js",
-    "test": "NODE_ENV=testing jest"
+    "test": "NODE_ENV=testing jest --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
