--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev --transpile-only --respawn --exit-child --clear  src/index.ts",
     "build": "tsc",
-    "start:dev": "npm run build && node dist/index.js",
+    "start:dev": "nodemon dist/index.js",
     "start": "node dist/index.js",
     "test": "NODE_ENV=testing jest --detectOpenHandles"
   },
