--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     build: .
     ports:
       - "6000:6000"
+    env_file:
+      .env
     volumes:
       - .:/usr/src/index
     depends_on:
